[fix] [responsive] [plan-selector-ui] Properly show plan selector on small screens and fix overall responsiveness of UI components.

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -196,119 +196,7 @@
         }
       }
 
-      .fs-section--packages {
-        display: inline-block;
-        width: 100%;
-        position: relative;
 
-        .fs-packages-menu {
-          display: none;
-          flex-wrap: wrap;
-          justify-content: center;
-        }
-
-        .fs-packages-tab {
-          display: none;
-        }
-
-        .fs-package-tab {
-          display: inline-block;
-          flex: 1;
-
-          a {
-            display: block;
-            padding: 4px 10px 7px;
-            border-bottom: 2px solid transparent;
-            color: #000;
-            text-align: center;
-            text-decoration: none;
-          }
-
-          &.fs-package-tab--selected {
-            a {
-              border-color: #0085ba;
-            }
-          }
-        }
-
-        .fs-packages-nav {
-          position: relative;
-          overflow: hidden;
-          margin: auto;
-
-          &:before, &:after {
-            position: absolute;
-            top: 0;
-            bottom: 0;
-            width: 60px;
-            margin-bottom: 32px;
-          }
-
-          &:before {
-            z-index: 1;
-          }
-
-          &.fs-has-previous-plan:before {
-            content: "";
-            left: 0;
-            background: linear-gradient(to right, #cccccc96, transparent);
-          }
-
-          &.fs-has-next-plan:after {
-            content: "";
-            right: 0;
-            background: linear-gradient(to left, #cccccc96, transparent);
-          }
-
-          &.fs-has-featured-plan:before,
-          &.fs-has-featured-plan:after {
-            top: 2.8em;
-          }
-        }
-
-        .fs-prev-package, .fs-next-package {
-          position: absolute;
-          top: 50%;
-          margin-top: -11px;
-          cursor: pointer;
-          font-size: 48px;
-          z-index: 1;
-        }
-
-        .fs-prev-package {
-          visibility: hidden;
-          z-index: 2;
-        }
-
-        .fs-has-featured-plan .fs-packages {
-          margin-top: 2.8em;
-        }
-
-        .fs-packages {
-          width: auto;
-          display: flex;
-          flex-direction: row;
-          margin-left: auto;
-          margin-right: auto;
-          margin-bottom: 30px;
-          border-top-right-radius: 10px;
-          position: relative;
-          transition: left 500ms ease,right 500ms ease;
-          padding-top: 5px;
-
-          &:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            width: 100px;
-            height: 100px;
-          }
-
-
-        }
-      }
 
       .fs-section--custom-implementation {
         padding: 15px 15px;
@@ -726,7 +614,7 @@
     }
   }
 
-  #fs_pricing_app .fs-modal--trial-confirmation .fs-button {
+  .fs-modal--trial-confirmation .fs-button {
     width: auto;
     font-size: 13px;
     line-height: 26px;
@@ -765,38 +653,8 @@
     }
   }
 
-  #fs_pricing_app .fs-app-main {
+  .fs-app-main {
     @media only screen and (max-width: 768px) {
-      .fs-section--plans-and-pricing .fs-section--packages {
-        .fs-next-package, .fs-prev-package {
-          display: none;
-        }
-
-        .fs-packages-menu {
-          display: block;
-          font-size: 24px;
-        }
-
-        .fs-packages-tab {
-          display: flex;
-          font-size: 18px;
-        }
-
-        .fs-packages, .fs-package {
-          .fs-most-popular {
-            display: none;
-          }
-        }
-
-        .fs-packages-menu {
-          display: flex;
-        }
-
-        .fs-has-featured-plan .fs-packages {
-          margin-top: 0;
-        }
-      }
-
       .fs-section--testimonials .fs-nav-pagination {
         display: none !important;
       }
@@ -807,10 +665,6 @@
     }
 
     @media only screen and (max-width: 455px) {
-      .fs-section--plans-and-pricing .fs-section--packages .fs-packages .fs-package {
-        width: 100%;
-      }
-
       .fs-section--testimonials .fs-testimonials-nav .fs-testimonials .fs-testimonial {
         width: auto;
       }
@@ -820,26 +674,16 @@
           display: none;
         }
       }
-
-      .fs-section--plans-and-pricing {
-        padding: 10px;
-      }
     }
 
     @media only screen and (max-width: 375px) {
-      #fs_pricing_app .fs-app-main {
-        .fs-section--plans-and-pricing .fs-section--packages .fs-packages .fs-package {
-          width: 100%;
-        }
-
         .fs-section--testimonials .fs-testimonials-nav .fs-testimonials .fs-testimonial {
           width: auto;
         }
-      }
     }
   }
 
-  #fs_pricing_app .fs-app-header {
+  .fs-app-header {
     @media only screen and (max-width: 445px) {
       .fs-page-title h3{
         margin-left: 0px;
